--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
-  - "2.7"
+  - 2.7
 # command to install dependencies
 install:true
   #- pip install -r requirements.txt
 # command to run tests
 script:
-  - test.py
+  - pytest
