--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
-  - 2.7
+  - "2.6"
+  - "2.7"
 # command to install dependencies
-install:true
-  #- pip install -r requirements.txt
+install:
+  - pip install -r requirements.txt
 # command to run tests
 script:
   - pytest
