--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ install:
 # command to run tests
 script:
   - pytest
+
+deploy:
+  provider: script
+  script: bash deploy.sh
+  on:
+    branch: master
