--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,15 @@ script:
   - pytest
   - pytest tests/pytests_test.py
 
+addons:
+  ssh_known_hosts: laastutabloo.ee
+
+before_deploy:
+- openssl aes-256-cbc -K $encrypted_<...>_key -iv $encrypted_<...>_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+
 deploy:
   provider: script
   script: bash deploy.sh
