--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ celery==3.1.25
 kombu==3.0.37
 progressbar==2.3
 messytables==0.10
+-e git+https://github.com/datagovuk/ckanext-report.git#egg=ckanext-report
 -e git+https://github.com/okfn/ckanext-archiver.git#egg=ckanext-archiver
 kombu-sqlalchemy==1.1.0
 python-dateutil>=1.5
