--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
+sudo: required
+
+services:
+  - docker
+  - git clone https://github.com/ckan/ckan.git
+  - cd ckan 
+  - git checkout tags/ckan-2.8.1
+  - cd contrib/docker
+  - docker-compose up -d --build
+
 language: python
 python:
   - "2.7"
@@ -6,7 +16,7 @@ python:
 #  - pip install -r requirements.txt
 # command to run tests
 #
-script:
+-script:
   - pytest
   - pytest tests/pytests_test.py
 
