--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 
 services:
   - docker
+
+before_install:
   - git clone https://github.com/ckan/ckan.git
   - cd ckan 
   - git checkout tags/ckan-2.8.1
