--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,8 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
-# command to run tests
-#
--script:
+
+script:
   - pytest
   - pytest tests/pytests_test.py
 
