--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,34 @@ services:
 
 before_install:
   - cd
-  - git clone https://github.com/ckan/ckan.git
-  - cd ckan 
-  - git checkout tags/ckan-2.8.1
-  - cd contrib/docker
-  - docker-compose up -d --build
-  - cd
+  - sudo apt-get install python-dev postgresql libpq-dev python-pip python-virtualenv git-core solr-jetty openjdk-8-jdk redis-server
+  - sudo mkdir -p /usr/lib/ckan/default
+  - sudo chown `whoami` /usr/lib/ckan/default
+  - virtualenv --no-site-packages /usr/lib/ckan/default
+  - . /usr/lib/ckan/default/bin/activate
+  - pip install setuptools==36.1
+  - pip install -e 'git+https://github.com/ckan/ckan.git@ckan-2.8.1#egg=ckan'
+  - pip install -r /usr/lib/ckan/default/src/ckan/requirements.txt
+  - deactivate 
+  - . /usr/lib/ckan/default/bin/activate
+  - echo 'user' | sudo -u postgres createuser -S -D -R -P ckan_default
+  - sudo -u postgres createdb -O ckan_default ckan_default -E utf-8
+  - sudo mkdir -p /etc/ckan/default
+  - sudo chown -R `whoami` /etc/ckan/
+  - paster make-config ckan /etc/ckan/default/development.ini
+  - sed -i 's/sqlalchemy.url = postgresql:\/\/ckan_default:pass@localhost\/ckan_default/sqlalchemy.url = postgresql:\/\/ckan_default:user@localhost\/ckan_default/g' /etc/ckan/default/development.ini
+  - sed -i 's/ckan.site_url =/ckan.site_url = http:\/\/data.laastutabloo.ee/g' /etc/ckan/default/development.ini
+  - sed -i 's/#JETTY_HOST=127.0.0.1/JETTY_HOST=127.0.0.1/g' /etc/default/jetty8
+  - sed -i 's/JETTY_PORT=8080/JETTY_PORT=8983/g' /etc/default/jetty8
+  - sudo service jetty8 restart
+  - sudo mv /etc/solr/conf/schema.xml /etc/solr/conf/schema.xml.bak
+  - sudo ln -s /usr/lib/ckan/default/src/ckan/ckan/config/solr/schema.xml /etc/solr/conf/schema.xml
+  - sed -i 's/#solr_url=http:\/\/127.0.0.1:8983\/solr/solr_url=http:\/\/127.0.0.1:8983\/solr/g' /etc/ckan/default/development.ini
+  - ln -s /usr/lib/ckan/default/src/ckan/who.ini /etc/ckan/default/who.ini
+  - cd /usr/lib/ckan/default/src/ckan
+  - paster db init -c /etc/ckan/default/development.ini
+  - cd /usr/lib/ckan/default/src/ckan
+  - paster serve /etc/ckan/default/development.ini &
   - cd $TRAVIS_BUILD_DIR
 
 language: python
