--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 sudo: required
 
-services:
-  - docker
-
 before_install:
   - cd
+  - sudo apt-get upgrade
   - sudo apt-get install python-dev postgresql libpq-dev python-pip python-virtualenv git-core solr-jetty openjdk-8-jdk redis-server
   - sudo mkdir -p /usr/lib/ckan/default
   - sudo chown `whoami` /usr/lib/ckan/default
