--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
+dist: xenial
 sudo: required
-
-services:
-  - postgresql
 
 before_install:
   - cd
-  - sudo apt-get install python-dev libpq-dev python-pip python-virtualenv git-core solr-jetty openjdk-8-jdk redis-server
+  - sudo apt-get install python-dev postgresql libpq-dev python-pip python-virtualenv git-core solr-jetty openjdk-8-jdk redis-server
   - sudo mkdir -p /usr/lib/ckan/default
   - sudo chown `whoami` /usr/lib/ckan/default
   - virtualenv --no-site-packages /usr/lib/ckan/default
