--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ before_install:
   - pip install -r /usr/lib/ckan/default/src/ckan/requirements.txt
   - deactivate 
   - . /usr/lib/ckan/default/bin/activate
-  - echo 'user' | sudo -u postgres createuser -S -D -R -P ckan_default
-  - sudo -u postgres createdb -O ckan_default ckan_default -E utf-8
+  - echo 'user' | createuser -S -D -R -P ckan_default
+  - createdb -O ckan_default ckan_default -E utf-8
   - sudo mkdir -p /etc/ckan/default
   - sudo chown -R `whoami` /etc/ckan/
   - paster make-config ckan /etc/ckan/default/development.ini
