some more postgres/travis magic

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,11 @@ before_install:
   - pip install -r /usr/lib/ckan/default/src/ckan/requirements.txt
   - deactivate 
   - . /usr/lib/ckan/default/bin/activate
-  - echo 'user' | createuser -S -D -R -P ckan_default
-  - createdb -O ckan_default ckan_default -E utf-8
+  - psql -c 'create database ckan_default;' -U postgres
   - sudo mkdir -p /etc/ckan/default
   - sudo chown -R `whoami` /etc/ckan/
   - paster make-config ckan /etc/ckan/default/development.ini
-  - sed -i 's/sqlalchemy.url = postgresql:\/\/ckan_default:pass@localhost\/ckan_default/sqlalchemy.url = postgresql:\/\/ckan_default:user@localhost\/ckan_default/g' /etc/ckan/default/development.ini
+  - sed -i 's/sqlalchemy.url = postgresql:\/\/ckan_default:pass@localhost\/ckan_default/sqlalchemy.url = postgresql:\/\/postgres@localhost\/ckan_default/g' /etc/ckan/default/development.ini
   - sed -i 's/ckan.site_url =/ckan.site_url = http:\/\/data.laastutabloo.ee/g' /etc/ckan/default/development.ini
   - sed -i 's/#JETTY_HOST=127.0.0.1/JETTY_HOST=127.0.0.1/g' /etc/default/jetty8
   - sed -i 's/JETTY_PORT=8080/JETTY_PORT=8983/g' /etc/default/jetty8
