travis install extentions 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,13 +37,13 @@ before_install:
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
   - cd $TRAVIS_BUILD_DIR/ckanext-harvest
-  - pip install -r pip-requirements.txt --allow-all-external
-  - pip install -r dev-requirements.txt --allow-all-external
+  - pip install -r pip-requirements.txt
+  - pip install -r dev-requirements.txt
   - python setup.py develop
   - paster harvester initdb -c /etc/ckan/default/development.ini
   - cd $TRAVIS_BUILD_DIR/ckanext-datastorer
   - pip install -e git+git://github.com/ckan/ckanext-datastorer.git#egg=ckanext-datastorer
-  - pip install -r ckanext-datastorer/pip-requirements.txt
+  - pip install -r pip-requirements.txt
   - pip install nose
   - pip install mock
   - pip install factory
