--- a/.travis.yml
+++ b/.travis.yml
@@ -65,14 +65,14 @@ script:
 addons:
   ssh_known_hosts: laastutabloo.ee
 
-before_deploy:
+after_success:
 - openssl aes-256-cbc -K $encrypted_<...>_key -iv $encrypted_<...>_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
+- git remote add production laastutabloo.ee
+- git push production 
 
-deploy:
-  provider: script
-  script: bash deploy.sh
-  on:
-    branch: master
+
+
+
