travis deployment master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,8 +71,7 @@ after_success:
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
 - git remote add production laastutabloo.ee
-- git push production 
-
+- git push production master
 
 
 
