--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ after_success:
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
-- git remote add production laastutabloo.ee
+- git remote add production ssh://root@laastutabloo.ee
 - git push production master
 
 
