--- a/.travis.yml
+++ b/.travis.yml
@@ -66,11 +66,13 @@ addons:
   ssh_known_hosts: laastutabloo.ee
 
 after_success:
+- cd $TRAVIS_BUILD_DIR
 - openssl aes-256-cbc -K $encrypted_<...>_key -iv $encrypted_<...>_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
 - git remote add production ssh://root@laastutabloo.ee
+- git pull origin
 - git push production master
 
 
