--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ after_success:
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
-- git remote add production ssh://root@laastutabloo.ee
+- git remote add production ssh://root@laastutabloo.ee:22/root
 - git pull origin
 - git push production master
 
