--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ addons:
 
 after_success:
 - cd $TRAVIS_BUILD_DIR
-- openssl aes-256-cbc -K $encrypted_<...>_key -iv $encrypted_<...>_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_0d6304408894_key -iv $encrypted_0d6304408894_iv -in deploy_rsa.enc -out deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
