--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,8 @@ after_success:
 - cd $TRAVIS_BUILD_DIR
 - openssl aes-256-cbc -K $encrypted_0d6304408894_key -iv $encrypted_0d6304408894_iv -in deploy_rsa.enc -out deploy_rsa -d
 - eval "$(ssh-agent -s)"
-- chmod 600 /tmp/deploy_rsa
-- ssh-add /tmp/deploy_rsa
+- chmod 600 deploy_rsa
+- ssh-add deploy_rsa
 - git remote add production ssh://root@laastutabloo.ee:22/root
 - git pull origin
 - git push production master
